# Linux

exercises/ch4_fileio/: tee_io  tee_io.c
exercises/ch5_fileio/: append_seek  append_seek.c  atomic_append  atomic_append.c  dup_io  dup_io.c  readv_io  readv_io.c
exercises/ch6_processes/: unsetenv  unsetenv.c
exercises/ch7_memalloc/: malloc  mymalloc  mymalloc.c
exercises/ch8_users_groups/: CMakeLists.txt  getpwnam.c
exercises/ch9_proccred/: CMakeLists.txt  initgroups.c
fileio/: copy.c  large_file.c  seek_io.c  t_readv.c
lib/: CMakeLists.txt  error_functions.c  error_functions.h  get_num.c  get_num.h  tlpi_hdr.h
memalloc/: CMakeLists.txt  free_and_sbrk.c
proc/: display_env.c  longjmp.c  mem_segments.c  modify_env.c  necho.c  setjmp_vars.c
proccred/: CMakeLists.txt  idshow.c
time/: CMakeLists.txt  calendar_time.c
users_groups/: check_password.c  ugid_functions.c  ugid_functions.h
